changes in the simulation

--- a/treative_frontend/src/app/components/simulation-details/simulation-details.component.html
+++ b/treative_frontend/src/app/components/simulation-details/simulation-details.component.html
@@ -6,7 +6,7 @@
         <h2><b>Nazwa symulacji:</b> {{ simulation.simulationName }}</h2>
         <button (click)="editSimulation(simulation)" class="edit-button"><i class="fas fa-edit"></i></button>
       </div>
-      <p><b>Wielkość symulacji:</b> {{ simulation.populationSize }}</p>
+      <p><b>Wielkość populacji:</b> {{ simulation.populationSize }}</p>
       <p><b>Początkowa liczba osób zakażonych:</b> {{ simulation.initialNumberOfInfectedPeople }}</p>
       <p><b>Wskaźnik zakaźności:</b> {{ simulation.infectiveRate }}</p>
       <p><b>Wskaźnik śmiertelności:</b> {{ simulation.mortalityRate }}</p>
